# movielist

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt
include/: parser.hpp  repair.hpp
src/: main.cpp  parser.cpp  repair.cpp
